--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "1.13.15",
     "ember-disable-proxy-controllers": "^1.0.1",
-    "ember-export-application-global": "^1.0.4"
+    "ember-export-application-global": "^1.0.4",
+    "ember-legacy-controllers": "0.0.1",
+    "ember-legacy-views": "0.2.0",
+    "ember-table": "0.9.2"
   }
 }
